--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,5 @@
 <project name="DMAssist" basedir="." default="all">
 
-    <taskdef resource="cpptasks.tasks">
-      <classpath location="3rdparty/cpptasks.jar"/>
-    </taskdef>
-
     <property name="src.java.dir"  value="src"/>
     <property name="src.c.dir"     value="csrc"/>
     <property name="src.resources.dir"     value="resources"/>
@@ -24,7 +20,7 @@
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 	
-    <taskdef resource="cpptasks.tasks"/>
+    <path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
 
     <target name="setup">
         <mkdir dir="${classes.dir}"/>
@@ -38,17 +34,6 @@
         <delete dir="${build.dir}"/>
     </target>
     
-    <target name="compile-c" depends="setup">
-        <cc outtype="shared" subsystem="console" outfile="${build.dir}/DMAssistJNI" objdir="${obj.dir}">
-            <fileset dir="${src.c.dir}" includes="**/*.c"/>
-            <includepath>
-                <dirset dir="${src.c.dir}/dnd/include" />
-                <dirset dir="${src.c.dir}/dnd/npc" />
-                <dirset dir="${src.c.dir}/utils" />
-            </includepath>
-        </cc>        
-    </target>
-
     <target name="compile-java" depends="setup">
         <javac srcdir="${src.java.dir}" destdir="${classes.dir}"  classpathref="classpath"/>
         <copy todir="${classes.dir}">
@@ -56,7 +41,7 @@
         </copy>
     </target>
 
-    <target name="package" depends="compile-java,compile-c,resources">
+    <target name="package" depends="compile-java,resources">
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
@@ -84,7 +69,7 @@
         <java fork="true" classname="${main-class}">
             <classpath>
                 <path refid="classpath"/>
-                <path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
+                <path refid="application"/>
             </classpath>
         	<jvmarg value="-Djava.library.path=build"/>
         </java>
