--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,14 @@
         </copy>
     </target>
 
-    <target name="package" depends="compile-java,resources">
+	<!-- ================================= 
+          target: package              
+         ================================= -->
+    <target name="package" depends="jar,zip" description="--> Creates final packages">        
+    </target>
+
+	
+    <target name="jar" depends="compile-java,resources">
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
@@ -65,6 +72,18 @@
         </copy>
     </target>
 
+    <target name="zip" depends="jar">
+        <zip destfile="${build.dir}/${ant.project.name}.zip">
+    		<fileset file="3rdparty/jyaml-1.3.jar"/>
+            <path refid="application"/>
+        	<zipfileset file="${src.resources.dir}/dmassist" filemode="755"/>
+        	<zipfileset file="${src.resources.dir}/dmassist.bat" filemode="755"/>
+        	<zipfileset dir="${src.resources.dir}" includes="*.txt,*.html" 
+        			    prefix="resources" />
+   		</zip>
+    </target>
+
+	
     <target name="run" depends="build" description="--> Runs the app">
         <java fork="true" classname="${main-class}">
             <classpath>
