--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,14 @@
 <project name="DMAssist" basedir="." default="all">
 
-	<property name="src.java.dir"  value="src"/>
+	<property name="src.engine.dir"  value="src/engine"/>
+	<property name="src.swing.dir"  value="src/swing"/>
 	<property name="src.c.dir"     value="csrc"/>
 	<property name="src.resources.dir"     value="resources"/>
 
 	<property name="build.dir"   value="build"/>
-	<property name="classes.dir" value="${build.dir}/classes"/>
-	<property name="build.resources.dir" value="${classes.dir}/resources"/>
+	<property name="classes.engine.dir" value="${build.dir}/classes/engine"/>
+	<property name="classes.swing.dir" value="${build.dir}/classes/swing"/>
+	<property name="build.resources.dir" value="${build.dir}/resources"/>
 	<property name="build.docs.dir" value="${build.dir}/javadocs"/>
 	<property name="build.lib.dir" value="${build.dir}/lib"/>
 	<property name="jar.dir"     value="${build.dir}/jar"/>
@@ -14,16 +16,21 @@
 	<property name="lib.dir"     value="3rdparty"/>
 	<property name="report.dir"  value="${build.dir}/testreport"/>
 
-	<property name="main-class"  value="com.ziroby.dmassist.ui.Main"/>
+	<property name="main-class"  value="com.ziroby.dmassist.swing.Main"/>
 
 	<path id="classpath">
 		<fileset dir="${lib.dir}" includes="**/*.jar"/>
+	</path>
+	<path id="classpath-swing">
+		<fileset dir="${lib.dir}" includes="**/*.jar"/>
+        <dirset dir="${classes.engine.dir}"/>
 	</path>
 
 	<path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
 
 	<target name="setup">
-		<mkdir dir="${classes.dir}"/>
+		<mkdir dir="${classes.engine.dir}"/>
+		<mkdir dir="${classes.swing.dir}"/>
 		<mkdir dir="${build.resources.dir}"/>
 		<mkdir dir="${jar.dir}"/>
 		<mkdir dir="${obj.dir}"/>
@@ -34,10 +41,22 @@
 		<delete dir="${build.dir}"/>
 	</target>
 
-	<target name="compile-java" depends="setup">
-		<javac srcdir="${src.java.dir}" destdir="${classes.dir}"  classpathref="classpath"/>
-		<copy todir="${classes.dir}">
-			<fileset dir="${src.java.dir}" excludes="**/*.java"/>
+ 	<target name="compile-java" depends="compile-engine,compile-swing">
+    </target>
+
+	<target name="compile-engine" depends="setup">
+		<javac srcdir="${src.engine.dir}" 
+               destdir="${classes.engine.dir}"  classpathref="classpath"/>
+		<copy todir="${classes.engine.dir}">
+			<fileset dir="${src.engine.dir}" excludes="**/*.java"/>
+		</copy>
+	</target>
+
+ 	<target name="compile-swing" depends="setup,compile-engine">
+		<javac srcdir="${src.swing.dir}" destdir="${classes.swing.dir}"
+               classpathref="classpath-swing"/>
+		<copy todir="${classes.swing.dir}">
+			<fileset dir="${src.swing.dir}" excludes="**/*.java"/>
 		</copy>
 	</target>
 
@@ -50,8 +69,10 @@
 
 	<target name="jar" depends="compile-java,resources">
 		<jar destfile="${jar.dir}/${ant.project.name}.jar">
-			<fileset dir="${classes.dir}"/>
-			<fileset dir="${src.java.dir}" />
+			<fileset dir="${classes.engine.dir}"/>
+			<fileset dir="${classes.swing.dir}"/>
+			<fileset dir="${src.engine.dir}" />
+			<fileset dir="${src.swing.dir}" />
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}" />
 				<attribute name="SplashScreen-Image" value="resources/splash.png" />
@@ -87,7 +108,7 @@
 	</target>
 
 
-	<target name="run" depends="build" description="--> Runs the app">
+	<target name="run" depends="build,test" description="--> Runs the app">
 		<java fork="true" classname="${main-class}">
 			<classpath>
 				<path refid="classpath"/>
@@ -99,8 +120,28 @@
 
 	<target name="test" depends="junit" description="--> Runs all tests"/>
 
-	<target name="junit" depends="package">
-		<junit printsummary="yes">
+	<target name="junit" depends="package,junit-engine">
+    </target>
+
+	<target name="junit-engine" depends="package">
+		<junit printsummary="yes" haltonerror="true">
+			<classpath>
+				<path refid="classpath"/>
+                <dirset dir="${classes.engine.dir}"/>
+			</classpath>
+
+
+
+			<formatter type="xml"/>
+
+			<batchtest fork="yes" todir="${report.dir}">
+				<fileset dir="${src.engine.dir}" includes="**/*Test.java"/>
+			</batchtest>
+		</junit>
+	</target>
+
+<!--	<target name="junit-swing" depends="package">
+		<junit printsummary="yes" haltonerror="true">
 			<classpath>
 				<path refid="classpath"/>
 				<path refid="application"/>
@@ -109,12 +150,13 @@
 			<formatter type="xml"/>
 
 			<batchtest fork="yes" todir="${report.dir}">
-				<fileset dir="${src.java.dir}" includes="**/*Test.java"/>
+				<fileset dir="${src.swing.dir}" includes="**/*Test.java"/>
 			</batchtest>
 		</junit>
-	</target>
+	</target> -->
 
-	<target name="testreport" depends="junitreport" description="--> Runs tests &amp; creates an HTML report"/>
+	<target name="testreport" depends="junitreport" 
+            description="--> Runs tests &amp; creates an HTML report"/>
 
 	<target name="junitreport" depends="junit">
 		<junitreport>
@@ -123,9 +165,11 @@
 		</junitreport>
 	</target>
 
-	<target name="build" depends="package,junit" description="--> Builds everything"/>
+	<target name="build" depends="package,junit" 
+            description="--> Builds everything"/>
 
-	<target name="rebuild" depends="clean,build" description="--> Cleans &amp; builds"/>
+	<target name="rebuild" depends="clean,build"
+            description="--> Cleans &amp; builds"/>
 
 	<target name="javadoc" description="--> Create documentation">
 		<javadoc
@@ -138,7 +182,13 @@
 
 
 
-			<packageset dir="${src.java.dir}" defaultexcludes="yes">
+			<packageset dir="${src.engine.dir}" defaultexcludes="yes">
+				<include name="com/ziroby/**"/>
+				<exclude name="**/*Test.java"/>
+				<exclude name="**/*Tests.java"/>
+			</packageset>
+
+			<packageset dir="${src.swing.dir}" defaultexcludes="yes">
 				<include name="com/ziroby/**"/>
 				<exclude name="**/*Test.java"/>
 				<exclude name="**/*Tests.java"/>
