--- a/src/engine/.project
+++ b/src/engine/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dmassist-engine</name>
+	<name>dmassist-engine3</name>
 	<comment></comment>
 	<projects>
 	</projects>
