--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -11,6 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    <uses-sdk android:minSdkVersion="3" />
 
     </application>
 
