--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.ziroby.android.dmassist"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,6 +14,7 @@
     <uses-sdk android:minSdkVersion="3" />
 
     <activity android:name="AboutBox"></activity>
+    <activity android:name="AddCreature"></activity>
 </application>
 
 
