--- a/src/swing/.classpath
+++ b/src/swing/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/dmassist-libs/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="/dmassist-libs/jyaml-1.3.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dmassist-engine3"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dmassist-libs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
