Added status bar with round counts

--- a/.bzrignore
+++ b/.bzrignore
@@ -3,17 +3,4 @@ bin
 build
 test-classes
 classes
-classes
-0536AA81A6F8618EF1FC89AB4A5291FF.cache.html
-0A9476898799A150D840F0B1C3672921.cache.png
-2916A6D7D89456FEE723A74659837AEB.cache.html
-366B5C8BB787DC4ADF8E55A3A08EC1C9.cache.html
-396F806CD63ABD414BFBB9D57429F05B.cache.png
-80EA1C22F6140D31E186E624BA89591A.cache.html
-917F22CF51D32D138802A41559695632.cache.html
-92AACD444EDA09F92BB72C36682AAC5B.cache.html
-clear.cache.gif
-DF7764EEC1903CD03C9545B354D8D8E4.cache.png
-E44767377485D18D6B6864F65BA8EF73.cache.png
-EDC7827FEEA59EE44AD790B1C6430C45.cache.png
-classes
+*.cache.*
