Added load and save for Android

--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <activity android:name="AboutBox"></activity>
     <activity android:name="AddCreature"></activity>
 <activity android:name="EditEntity"></activity>
+<activity android:name="LoadEntity"></activity>
 </application>
 
 
