Help and various text mods

--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <activity android:name="AddCreature"></activity>
 <activity android:name="EditEntity"></activity>
 <activity android:name="LoadEntity"></activity>
+<activity android:name="Help"></activity>
 </application>
 
 
