--- a/src/android/.classpath
+++ b/src/android/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="src" path="/dmassist-engine3"/>
+	<classpathentry exported="true" kind="src" path="/dmassist-engine3"/>
+	<classpathentry kind="lib" path="/dmassist-libs/jyaml-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
