--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.ziroby.android.dmassist"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -11,7 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="3"/>
 
     <activity android:name="AboutBox"></activity>
     <activity android:name="AddCreature"></activity>
@@ -22,4 +22,5 @@
 
 
 
+<uses-sdk android:minSdkVersion="3" ></uses-sdk>
 </manifest> 
