--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ziroby.android.dmassist"
       android:versionCode="4" android:versionName="1.2 (fixes load bug &amp; adds landscape mode)">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Light" android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -17,6 +17,7 @@
 <activity android:name="EditEntity"></activity>
 <activity android:name="LoadEntity"></activity>
 <activity android:name="Help"></activity>
+<activity android:name="QueryTypeForLoad"></activity>
 </application>
 
 
