--- a/src/android/pom.xml
+++ b/src/android/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.ziroby.dmassist</groupId>
         <artifactId>dmassist</artifactId>
         <version>1.2-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
     <groupId>com.ziroby.dmassist</groupId>
     <artifactId>dmassist-android</artifactId>
