--- a/src/gwt/dmassist-gwt/.classpath
+++ b/src/gwt/dmassist-gwt/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/dmassist-engine3"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dmassist-engine"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
