--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                    <artifactId>maven-android-plugin</artifactId>
-                    <version>3.8.2</version>
+                    <groupId>com.simpligility.maven.plugins</groupId>
+                    <artifactId>android-maven-plugin</artifactId>
+                    <version>4.3.0</version>
                     <configuration>
                         <sdk>
                             <platform>20</platform>
@@ -66,7 +66,7 @@
     <module>src/engine</module>
     <module>src/swing</module>
     <module>src/android</module>
-    <module>src/android-test</module>
+    <!-- <module>src/android-test</module> -->
   </modules>
 
 </project>
