--- a/src/android/src/main/AndroidManifest.xml
+++ b/src/android/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ziroby.android.dmassist"
-      android:versionCode="4" android:versionName="1.2 (fixes load bug &amp; adds landscape mode)">
+          package="com.ziroby.android.dmassist"
+          android:versionCode="4" android:versionName="1.2 (fixes load bug &amp; adds landscape mode)">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Light" android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
@@ -10,18 +10,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <uses-sdk android:minSdkVersion="3"/>
 
-    <activity android:name="AboutBox"></activity>
-    <activity android:name="AddCreature"></activity>
-<activity android:name="EditEntity"></activity>
-<activity android:name="LoadEntity"></activity>
-<activity android:name="Help"></activity>
-<activity android:name="QueryTypeForLoad"></activity>
-<activity android:name="MyPreferencesActivity"></activity>
-</application>
-
+        <activity android:name="AboutBox"/>
+        <activity android:name="AddCreature"/>
+        <activity android:name="EditEntity"/>
+        <activity android:name="LoadEntity"/>
+        <activity android:name="Help"/>
+        <activity android:name="QueryTypeForLoad"/>
+        <activity android:name="MyPreferencesActivity"/>
+    </application>
 
 
-<uses-sdk android:minSdkVersion="3" ></uses-sdk>
+
+    <uses-sdk android:minSdkVersion="18" />
 </manifest> 
