--- a/src/android/src/main/AndroidManifest.xml
+++ b/src/android/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ziroby.android.dmassist"
-          android:versionCode="4" android:versionName="1.2 (fixes load bug &amp; adds landscape mode)">
+          android:versionCode="4" android:versionName="1.3">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Light" android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
@@ -22,5 +22,5 @@
 
 
 
-    <uses-sdk android:minSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="3" />
 </manifest> 
