--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
   <modules>
     <module>src/engine</module>
     <module>src/swing</module>
+    <module>src/shade-codec</module>
     <module>src/android</module>
     <!-- <module>src/android-test</module> -->
   </modules>
