--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -10,13 +10,15 @@
 	</parent>
 	<groupId>com.ziroby.dmassist</groupId>
 	<artifactId>server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>DM Assist Server</name>
 	<description>Server for DM Assist Online</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<cucumber.version>6.2.2</cucumber.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<dependencies>
@@ -56,17 +58,6 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java8</artifactId>
 			<version>${cucumber.version}</version>
@@ -83,6 +74,13 @@
 			<artifactId>cucumber-spring</artifactId>
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>
+				${project.groupId}
+			</groupId>
+			<artifactId>dmassist-engine</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
