Make front end requests match correct REST paths.

--- a/src/engine/pom.xml
+++ b/src/engine/pom.xml
@@ -17,6 +17,11 @@
     <name>DM Assist - Engine</name>
     <url>http://www.ziroby.com/android</url>
 
+    <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
